@@ -1,3 +1,7 @@
+2007-06-22  Miklos Szeredi <miklos@szeredi.hu>
+
+	* lib: fix locking when loading a filesystem module
+
 2007-06-21  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add fs subtype support to mount.fuse
